package org.example.Entidades;

public interface Entidade {
    public void setId(Long id);

    public Long getId();
}
