' Generated by UML Generator
' Encoded: pLVDRzCm5B_dhx2qIygQ2QuLJ2jbXqeRJApYWj3aEbvdIEBWE6Dix7_7dybpdBMTTe1R-xxVxza_lvmq4WlPbaNI_61LZGKk4Ibmqyob56pTIhealBfaznIzJcvOJX5XWXGqIOmLMXICLf8kU2K5Bmegq4E2qE66oWLUKuAB6vvEPkXI1QisoMEIu7KZ1IOIEV_GCLF1M8vpsipG6MlaszKnUeSg-WlDXS2_dIYTQ5DLbyGv5rSirzQysYZJDsTQbUaQY61Of3xW3ArK7UyvBoYkj9hcJBMUijpwJj7JbdTipNfBfRpbBDUQWcduKY2XTwHeGsCGQTqs10VArNQqB4WNgjQSxu-nyn8yR-MptTn4xJXyfVftnKlQcQl_0jzZVjLmmd01vQIglr-H-XhAp41Sv1G6cgAnC5Cq339nfIzpNRChwR0nWf71ACkFAWlepreR8SmV-dpMjKHELchg77TRk68ZpquHjTFxIsv5uIoO0afSOqBHgJkMTdhREWROn1Vjd5Qj2N6WZc1LKQ6osH_TVBH9EjHgu0_i3VXK4qwRyBHJqeOtu40TD6LeOLHTED6AtacUreANjGGWT6Xfcm-yNHSqDh9oPxHKm30n4aehDgORRQPHY6qyDl1QnGUTs7CwyrT1osfxcJmjkRiLavDNM8h2okrMSLH70ih-6XSDTLGdwAQbeqep45jWEgpd-NV1txm9xCaSKAU8KWJkhYap-g1B5wNJFu5I66tkG4b3Rco09i8jZ73ga8iZT9e8t332YajSE7ZX2Jl4UUwgzitCF96228AM_9OE39UZb6zR4Nqk7wF4Ghq52rvosCvsLWY8VJT3t-A22z1THXl9VsfG-ilYJffh9QJcm5yza0FloJC8QI_w7QNiBxg8D2WbzB86mHJrIR35fb7HuKboLW5_R0N_7BFAKl63Ulib8u-eLA8KYqtZhRz-yrawjtbTTmpi2KOBkXkd_m2YiRgB_e_HcKFaLDtlReWknmifVBW8WBAxJM8Mxtt3LzvKijLZYbxwrcJH_fNPfGy8tF869NRn2spiqXP1q8Di4QW7YzWiMit0U1UxuAg72zeitja6Ru51TNSLQd_QeuOfsgU2Vpic-FHuZQDKAB9aEaAaMsRRtwtuU6-PG--MalyNjnqGn9zjMVRd67oD9T4tHsGGVLuCBVoNnD6HalirrWKU5xxAicv1SIAkH2wLJpdmzTHgqXj2z18GBf93QWtaFQz20ko3Gob8444tS0F2FisuqyweeFvu8CEyG3hkTqAhl2sBlm
' URL: http://www.plantuml.com/plantuml/uml/pLVDRzCm5B_dhx2qIygQ2QuLJ2jbXqeRJApYWj3aEbvdIEBWE6Dix7_7dybpdBMTTe1R-xxVxza_lvmq4WlPbaNI_61LZGKk4Ibmqyob56pTIhealBfaznIzJcvOJX5XWXGqIOmLMXICLf8kU2K5Bmegq4E2qE66oWLUKuAB6vvEPkXI1QisoMEIu7KZ1IOIEV_GCLF1M8vpsipG6MlaszKnUeSg-WlDXS2_dIYTQ5DLbyGv5rSirzQysYZJDsTQbUaQY61Of3xW3ArK7UyvBoYkj9hcJBMUijpwJj7JbdTipNfBfRpbBDUQWcduKY2XTwHeGsCGQTqs10VArNQqB4WNgjQSxu-nyn8yR-MptTn4xJXyfVftnKlQcQl_0jzZVjLmmd01vQIglr-H-XhAp41Sv1G6cgAnC5Cq339nfIzpNRChwR0nWf71ACkFAWlepreR8SmV-dpMjKHELchg77TRk68ZpquHjTFxIsv5uIoO0afSOqBHgJkMTdhREWROn1Vjd5Qj2N6WZc1LKQ6osH_TVBH9EjHgu0_i3VXK4qwRyBHJqeOtu40TD6LeOLHTED6AtacUreANjGGWT6Xfcm-yNHSqDh9oPxHKm30n4aehDgORRQPHY6qyDl1QnGUTs7CwyrT1osfxcJmjkRiLavDNM8h2okrMSLH70ih-6XSDTLGdwAQbeqep45jWEgpd-NV1txm9xCaSKAU8KWJkhYap-g1B5wNJFu5I66tkG4b3Rco09i8jZ73ga8iZT9e8t332YajSE7ZX2Jl4UUwgzitCF96228AM_9OE39UZb6zR4Nqk7wF4Ghq52rvosCvsLWY8VJT3t-A22z1THXl9VsfG-ilYJffh9QJcm5yza0FloJC8QI_w7QNiBxg8D2WbzB86mHJrIR35fb7HuKboLW5_R0N_7BFAKl63Ulib8u-eLA8KYqtZhRz-yrawjtbTTmpi2KOBkXkd_m2YiRgB_e_HcKFaLDtlReWknmifVBW8WBAxJM8Mxtt3LzvKijLZYbxwrcJH_fNPfGy8tF869NRn2spiqXP1q8Di4QW7YzWiMit0U1UxuAg72zeitja6Ru51TNSLQd_QeuOfsgU2Vpic-FHuZQDKAB9aEaAaMsRRtwtuU6-PG--MalyNjnqGn9zjMVRd67oD9T4tHsGGVLuCBVoNnD6HalirrWKU5xxAicv1SIAkH2wLJpdmzTHgqXj2z18GBf93QWtaFQz20ko3Gob8444tS0F2FisuqyweeFvu8CEyG3hkTqAhl2sBlm
' Generated on: 2026-05-17T19:53:23.444963300

@startuml
skinparam classAttributeIconSize 0
hide circle

class ClienteController {
  +getCabecalho(): String
}

abstract class Controller {
  -entidades: List<T> = new ArrayList<T>()
  -contador_ids: Long = 1L
  --
  +criar(entidade: T): Boolean
  +editar(id: Long, entidade: T): Boolean
  +exibir(id: Long): void
  +listar(): void
  +excluir(id: Long): Boolean
  +buscar(id: Long): T
  +getCabecalho(): String
}

class PedidoController {
  +getCabecalho(): String
}

class ProdutoController {
  +getCabecalho(): String
}

class Cliente {
  -id: Long
  -nome: String
  -razao_social: String
  -cnpj_cpf: String
  --
  +Cliente(nome: String, razao_social: String, cnpj_cpf: String)
  +getId(): Long
  +setId(id: Long): void
  +getNome(): String
  +setNome(nome: String): void
  +getRazao(): String
  +setRazao(razao: String): void
  +getCnpj_cpf(): String
  +setCnpj_cpf(cnpj_cpf: String): void
  +toString(): String
}

interface Entidade {
  +setId(id: Long): void
  +getId(): Long
}

abstract class Menu {
  #scanner: Scanner
  --
  +Menu(scanner: Scanner)
  #exibirOpcoes(): void
  +executar(): void
  #lerOpcao(): int
  #lerTexto(prompt: String): String
  #lerDouble(prompt: String): Double
  #lerInteiro(prompt: String): Integer
  #lerLong(prompt: String): Long
}

class Pedido {
  -id: Long
  -cliente: Cliente
  -produtos: List<Produto> = new ArrayList<Produto>()
  -aprovado: Boolean = false
  -entregue: Boolean = false
  --
  +Pedido(cliente: Cliente)
  +getId(): Long
  +setId(id: Long): void
  +getCliente(): Cliente
  +setCliente(cliente: Cliente): void
  +getProdutos(): List<Produto>
  +setProdutos(produtos: List<Produto>): void
  +getAprovado(): Boolean
  +setAprovado(aprovado: Boolean): void
  +getEntregue(): Boolean
  +setEntregue(entregue: Boolean): void
  +getTotalPedido(): Double
  +addProduto(produto: Produto): void
  +removeProduto(produtoId: Long): Boolean
  +aprovarPedido(): void
  +marcarComoEntregue(): void
  +toString(): String
}

class Produto {
  -id: Long
  -nome: String
  -valor: Double
  -estoque: Integer
  --
  +Produto(nome: String, valor: Double, estoque: Integer)
  +setId(id: Long): void
  +getId(): Long
  +setNome(nome: String): void
  +getNome(): String
  +setValor(valor: Double): void
  +getValor(): Double
  +setEstoque(estoque: Integer): void
  +getEstoque(): Integer
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
}

class AppMenu {
  -clienteMenu: ClienteMenu
  -produtoMenu: ProdutoMenu
  -pedidoMenu: PedidoMenu
  --
  +AppMenu(scanner: Scanner)
  #exibirOpcoes(): void
  +executar(): void
}

class ClienteMenu {
  -controller: ClienteController
  --
  +ClienteMenu(controller: ClienteController, scanner: Scanner)
  #exibirOpcoes(): void
  +executar(): void
  -listar(): void
  -criar(): void
  -exibir(): void
  -editar(): void
  -excluir(): void
}

class PedidoMenu {
  -pedidoController: PedidoController
  -clienteController: ClienteController
  -produtoController: ProdutoController
  --
  +PedidoMenu(pedidoController: PedidoController, clienteController: ClienteController, produtoController: ProdutoController, scanner: Scanner)
  #exibirOpcoes(): void
  +executar(): void
  -listar(): void
  -criar(): void
  -exibir(): void
  -editarProdutos(): void
  -aprovar(): void
  -marcarEntregue(): void
  -excluir(): void
}

class ProdutoMenu {
  -controller: ProdutoController
  --
  +ProdutoMenu(controller: ProdutoController, scanner: Scanner)
  #exibirOpcoes(): void
  +executar(): void
  -listar(): void
  -criar(): void
  -exibir(): void
  -editar(): void
  -excluir(): void
}

ClienteController --|> Controller
PedidoController --|> Controller
ProdutoController --|> Controller
Cliente ..|> Entidade
Pedido ..|> Entidade
Pedido *-- Cliente
Pedido o-- Produto
Produto ..|> Entidade
AppMenu --|> Menu
AppMenu *-- ClienteMenu
AppMenu *-- ProdutoMenu
AppMenu *-- PedidoMenu
ClienteMenu --|> Menu
ClienteMenu *-- ClienteController
PedidoMenu --|> Menu
PedidoMenu *-- PedidoController
PedidoMenu *-- ClienteController
PedidoMenu *-- ProdutoController
ProdutoMenu --|> Menu
ProdutoMenu *-- ProdutoController
@enduml